# agentic_test

./: .env.example  .gitignore  README.md  langgraph.json  pyproject.toml
app/: events.py  graph.py  lg_entry.py  llm.py  prompts.py  scheduler.py  settings.py  telemetry.py
app/agents/: exec_agent.py  risk_agent.py  signal_agent.py  strategy_agent.py
app/prompts/: CHANGELOG.md
app/prompts/exec/: execute_order__v1.md
app/prompts/risk/: assess_risk__v1.md
app/prompts/signal/: generate_signal__v1.md
app/prompts/strategy/: decide_strategy__v1.md
app/prompts/system/: global__v1.md
app/tools/: broker_oanda.py  broker_paper.py  broker_provider.py  data_alpha_vantage.py  data_mock.py  data_models.py  data_oanda.py  data_provider.py  errors.py  macro_tradingecon.py  news_finnhub.py  registry.py  risk_tool.py  standard.py  ta_tool.py
app_cli/: run.py
config/: settings.yaml
scripts/: create_crons.py  create_crons_platform_only.py  doctor.py  scheduler_trigger.py
tests/: test_graph.py  test_lg_entry.py  test_llm.py  test_oanda.py  test_paper_broker.py  test_prompts.py  test_risk.py  test_scheduler_trigger.py  test_settings.py  test_telemetry.py  test_tools.py
